fix: scrollbar

--- a/7 - CÓDIGO FRONTEND/repositorio_tcc/src/App.css
+++ b/7 - CÓDIGO FRONTEND/repositorio_tcc/src/App.css
@@ -83,3 +83,7 @@ label.required:after {
 	transform: scaleX(1);
 	transform-origin: bottom left;
 }
+
+html, body {
+  overflow-y: auto; 
+}
